# ipcluster_magic

./: .gitignore  README.md  RERADME.md  index.md  pyproject.toml  setup.py
.github/workflows/: notebook-tests.yml  python-app.yml  python-publish.yml
examples/: Untitled.ipynb  hvd-sgd-ipc-tf2.ipynb  ipp_dask_distribute.ipynb  non-mpi_cluster.ipynb  osu_bw_cupy.py  osu_bw_mpi4py-cupy.ipynb  osu_bw_mpi4py.ipynb  test-ipcmagic.ipynb  tf-hvd-sgd-ipc-tf-1.14.ipynb
examples/reframe-check/: check_ipcmagic.py
examples/reframe-check/src/: tf-hvd-sgd-ipc-tf-1.14.py
ipcluster_magic/: ipcluster_local_magic.py  ipcluster_magic.py
ipcluster_magics/: ipcluster_magics.py
ipcmagic/: __init__.py  dask_cluster.py  magics.py  utilities.py
ipcmagic-cscs/: test-ipcmagic.ipynb  tf-hvd-sgd-ipc-tf-1.14.ipynb
ipcmagic-cscs/ipcmagic/: local.py
ipcmagic-cscs/reframe/: check_ipcmagic.py
ipcmagic-cscs/reframe/src/: tf-hvd-sgd-ipc-tf-1.14.py
